--- a/Templates/test.html
+++ b/Templates/test.html
@@ -5,7 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-<h1>This is a header</h1>
-<p>This is a paragraph</p>
+    <h1>This is a header</h1>
+    <p>This is a paragraph</p>
+    <p>This is a second paragraph</p>
 </body>
 </html>
